--- a/frontend/src/components/Navbar/Navbar.css
+++ b/frontend/src/components/Navbar/Navbar.css
@@ -50,7 +50,39 @@
   top: -8px;
   right: -8px;
 }
-
+.navbar-profile {
+  position: relative;
+  cursor: pointer;
+}
+.nav-Profile-dropdown {
+  position: absolute;
+  display: none;
+  right: 0;
+  z-index: 1;
+}
+.navbar-profile:hover .nav-Profile-dropdown {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  background-color: #fff2ef;
+  padding: 12px 25px;
+  border-radius: 4px;
+  border: 1px solid tomato;
+  outline: 2px solid white;
+  list-style: none;
+}
+.nav-Profile-dropdown li {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+  cursor: pointer;
+}
+.nav-Profile-dropdown img {
+  width: 20px;
+}
+.nav-Profile-dropdown li:hover {
+  color: tomato;
+}
 @media (max-width: 1050px) {
   .navbar .logo {
     width: 140px;
